After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708716 - crash in empathy-chat
crash in empathy-chat
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Chat
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
: 708471 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-09-25 07:59 UTC by Frederic Peters
Modified: 2013-10-11 12:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
individual-store-channel: don't steal pixbuf store reference (1.14 KB, patch)
2013-09-25 12:38 UTC, Guillaume Desmottes
committed Details | Review

Description Frederic Peters 2013-09-25 07:59:58 UTC
Core was generated by `/scratch/jhbuild/libexec/empathy-chat'.
Program terminated with signal 11, Segmentation fault.
  • #0 type_check_is_value_type_U
    at gtype.c line 4115
  • #0 type_check_is_value_type_U
    at gtype.c line 4115
  • #1 g_type_check_is_value_type
    at gtype.c line 4143
  • #2 g_value_type_compatible
    at gvalue.c line 498
  • #3 g_value_object_collect_value
    at gobject.c line 3686
  • #4 gtk_tree_store_set_valist_internal
    at gtktreestore.c line 1049
  • #5 gtk_tree_store_set_valist
    at gtktreestore.c line 1148
  • #6 gtk_tree_store_set
    at gtktreestore.c line 1190
  • #7 individual_store_channel_contact_chat_state_changed
    at empathy-individual-store-channel.c line 178
  • #8 ffi_call_unix64
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #9 ffi_call
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #10 g_cclosure_marshal_generic
    at gclosure.c line 1454
  • #11 g_closure_invoke
    at gclosure.c line 777
  • #12 signal_emit_unlocked_R
    at gsignal.c line 3586
  • #13 g_signal_emit_valist
    at gsignal.c line 3330
  • #14 g_signal_emit
    at gsignal.c line 3386
  • #15 chat_state_changed_cb
    at text-channel.c line 380
  • #16 ffi_call_unix64
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #17 ffi_call
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #18 g_cclosure_marshal_generic_va
    at gclosure.c line 1550
  • #19 _g_closure_invoke_va
    at gclosure.c line 840
  • #20 g_signal_emit_valist
    at gsignal.c line 3238
  • #21 g_signal_emit
    at gsignal.c line 3386
  • #22 tp_channel_chat_state_changed_cb
    at channel.c line 794
  • #23 _tp_cli_channel_interface_chat_state_invoke_callback_for_chat_state_changed
    at _gen/tp-cli-channel-body.h line 1753
  • #24 tp_proxy_signal_invocation_run
    at proxy-signals.c line 268
  • #25 g_idle_dispatch
    at gmain.c line 5250
  • #26 g_main_dispatch
    at gmain.c line 3065
  • #27 g_main_context_dispatch
    at gmain.c line 3641
  • #28 g_main_context_iterate
    at gmain.c line 3712
  • #29 g_main_context_iteration
    at gmain.c line 3773
  • #30 g_application_run
    at gapplication.c line 1635
  • #31 main
    at empathy-chat.c line 158

Comment 1 Guillaume Desmottes 2013-09-25 12:38:06 UTC
Created attachment 255681 [details] [review]
individual-store-channel: don't steal pixbuf store reference

empathy_individual_store_get_individual_status_icon() doesn't return a reffed
pixbuf so we have to ref it explicitly.
Comment 2 Xavier Claessens 2013-09-25 13:54:29 UTC
+1
Comment 3 Guillaume Desmottes 2013-09-25 13:55:48 UTC
Attachment 255681 [details] pushed as 78ac77d - individual-store-channel: don't steal pixbuf store reference
Comment 4 Aleksander Morgado 2013-10-11 12:22:33 UTC
*** Bug 708471 has been marked as a duplicate of this bug. ***