individual-store-channel: don't steal pixbuf store reference

empathy_individual_store_get_individual_status_icon() doesn't return a reffed
pixbuf so we have to ref it explicitly.

https://bugzilla.gnome.org/show_bug.cgi?id=708716